[refactor] 채점 컴파일 방식 수정
